--- a/FrontEnd/DishDash/src/app/Components/cart/cart.component.html
+++ b/FrontEnd/DishDash/src/app/Components/cart/cart.component.html
@@ -22,7 +22,7 @@
       <p>Total: Rs {{ total }}/-</p>
     </div>
     <div class="button">
-      <button class="btn btn-primary" routerLink="customer/checkout">Checkout</button>
+      <button class="btn btn-primary checkoutBtn" routerLink="customer/checkout">Checkout</button>
     </div>
   </div>
 
