--- a/FrontEnd/DishDash/src/app/Components/footer/footer.component.html
+++ b/FrontEnd/DishDash/src/app/Components/footer/footer.component.html
@@ -4,7 +4,7 @@
     <div class="row gy-3">
       <div class="col-12 col-md-3 text-center text-md-start">
         <a href="/" class="d-inline-block mb-2">
-          <img src="../../../assets/images/dishdashgif.gif" alt="Logo" class="img-fluid" style="max-width: 100px;">
+          <img src="../../../assets/images/logo_v4.gif" alt="Logo" class="img-fluid" style="max-width: 100px;">
         </a>
         <p class="small mb-0">Your go-to platform for discovering the best food and drinks in the city.</p>
       </div>
