--- a/FrontEnd/DishDash/src/app/Components/navbar/navbar.component.html
+++ b/FrontEnd/DishDash/src/app/Components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/">
       <img
-        src="../../../assets/images/dishdashgif.gif"
+        src="../../../assets/images/logo_v4.gif"
         alt="Logo"
         class="logo"
       />
@@ -76,15 +76,15 @@
           </ul>
         </li>
         <li
-          class="nav-item position-relative"
+          class="nav-item position-relative carting"
           (mouseover)="showCart = true"
           (mouseleave)="showCart = false"
         >
           <a class="nav-link d-flex align-items-center">
             <mat-icon
-              class="cart-icon"
+              class="cart-icon cart carti"
               [matBadge]="matBadge"
-              matBadgeColor="warn"
+              matBadgeColor="warn" 
               >shopping_cart</mat-icon
             >
             <span class="ms-1 pointer">Cart</span>
