--- a/FrontEnd/DishDash/src/app/Components/search/search.component.html
+++ b/FrontEnd/DishDash/src/app/Components/search/search.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="searchbar flex flex-column flex-md-row align-items-center m-3">
     <div class="dropdown mb-3 mb-md-0">
-      <button class="btn btn-primary dropdown-toggle d-flex justify-content-around align-items-center" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+      <button class="btn btn-location dropdown-toggle d-flex justify-content-around align-items-center" type="button" data-bs-toggle="dropdown" aria-expanded="false">
         <mat-icon aria-hidden="false" aria-label="Location icon" fontIcon="location_on"></mat-icon> {{city}}
       </button>
       <ul class="dropdown-menu">
