--- a/FrontEnd/DishDash/src/app/Components/footer/footer.component.css
+++ b/FrontEnd/DishDash/src/app/Components/footer/footer.component.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #f8f9fa;
+  background-color: #FEF8F4;
   color: #343a40;
   padding: 20px 0;
 }
@@ -19,13 +19,13 @@
 }
 
 .footer .widget a {
-  color: #343a40;
+  color: #FEF8F4;
   text-decoration: none;
   transition: color 0.3s ease-in-out;
 }
 
 .footer .widget a:hover {
-  color: #007bff;
+  color: #FFBB4A;
 }
 
 .footer .social-media-wrapper .list-inline-item {
@@ -51,5 +51,5 @@
 }
 
 .footer .text-primary {
-  color: #007bff !important;
+  color: #FFBB4A !important;
 }
