--- a/FrontEnd/DishDash/src/app/Components/login/login.component.css
+++ b/FrontEnd/DishDash/src/app/Components/login/login.component.css
@@ -71,6 +71,11 @@
     margin-bottom: 1rem;
   }
 
+  /* .button {
+    background-color: #F4835F !important;
+    border: none;
+  } */
+
   .login-message {
     position: fixed;
     top: 10%;
