--- a/FrontEnd/DishDash/src/app/Components/login/login.component.html
+++ b/FrontEnd/DishDash/src/app/Components/login/login.component.html
@@ -41,7 +41,7 @@
     <div class="button">
       <button
         type="submit"
-        class="btn btn-primary btn-block mb-4"
+        class="btn btn-primary button btn-block mb-4"
         [disabled]="loginform.invalid"
       >
         Sign in
