--- a/FrontEnd/DishDash/src/app/Components/navigation/navigation.component.css
+++ b/FrontEnd/DishDash/src/app/Components/navigation/navigation.component.css
@@ -55,7 +55,8 @@ footer {
   width: 60px; /* Set equal width and height */
   height: 60px; /* Set equal width and height */
   border-radius: 50%;
-  background-color: #007bff; /* Primary color for the bubble */
+  background-color: #F4835F;
+   /* Primary color for the bubble */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -77,7 +78,8 @@ footer {
 .chatbubble-message {
   margin-top: 10px;
   padding: 5px 10px;
-  background-color: #007bff;
+  background-color: #3B273F;
+  /* background-color: #FFBB4A; */
   color: white;
   border-radius: 20px;
   font-size: 14px;
