--- a/FrontEnd/DishDash/src/app/Components/order-success/order-success.component.css
+++ b/FrontEnd/DishDash/src/app/Components/order-success/order-success.component.css
@@ -51,12 +51,14 @@
   }
   
   .text-primary {
+
     color: #007bff;
   }
   
   .btn-primary {
-    background-color: #007bff;
-    border-color: #007bff;
+    
+    background-color: #F4835F;
+    border-color: #F4835F;
     color: #fff;
     border-radius: 5px;
     padding: 10px 20px;
@@ -64,8 +66,8 @@
   }
   
   .btn-primary:hover {
-    background-color: #0056b3;
-    border-color: #0056b3;
+    background-color: #F4835F;
+    border-color: #F4835F;
   }
   
   @media (max-width: 768px) {
