--- a/FrontEnd/DishDash/src/app/Components/restaurantview/restaurantview.component.css
+++ b/FrontEnd/DishDash/src/app/Components/restaurantview/restaurantview.component.css
@@ -91,11 +91,25 @@
 }
 
 .favblack {
+color: #3B273F !important;
   font-size: 50px  !important;
   width: 20%;
   height: 100%;
 }
+.icon {
+  color: #F4835F  !important;
+}
 
+.addButton {
+  background-color: #F4835F !important;
+  color: white;
+  border: 0px;
+}
+
+/* .cuisines {
+  background-color:#3B273F !important;
+
+} */
 .rating-favorite .fav {
   font-size: 40px;
   cursor: pointer;
