Profile picture updating in navbar

--- a/FrontEnd/DishDash/src/app/Components/login/login.component.css
+++ b/FrontEnd/DishDash/src/app/Components/login/login.component.css
@@ -45,7 +45,11 @@
   }
   
   .spinner {
-    margin-top: 1rem;
+    /* margin-top: 0rem; */
+    height: 5vh;
+  }
+  .loadingSpinner {
+    max-height: 5vh;
   }
   
   .text-center {
