--- a/FrontEnd/DishDash/src/app/Components/login/login.component.html
+++ b/FrontEnd/DishDash/src/app/Components/login/login.component.html
@@ -50,7 +50,7 @@
 
     <!-- Spinner -->
     <div class="spinner flex justify-content-center" *ngIf="isLoadingSpinner">
-      <mat-spinner></mat-spinner>
+      <mat-spinner class="loadingSpinner"></mat-spinner>
     </div>
     
     <!-- Register link -->
