--- a/FrontEnd/DishDash/src/app/Components/profile/profile.component.html
+++ b/FrontEnd/DishDash/src/app/Components/profile/profile.component.html
@@ -2,6 +2,9 @@
   <!-- Profile Header Section -->
   <form [formGroup]="pictureForm" (ngSubmit)="onSubmit()">
     <div id="profile-div" class="welcome text-center p-4 bg-dark text-white position-relative rounded">
+      <div class="login-message alert alert-danger" *ngIf="showPictureErr" role="alert">
+        Only JPEG and PNG files are allowed.
+      </div>
       <img id="profileImage" *ngIf="profilePicture" class="profile rounded-circle" src="{{url}}"  alt="Profile Image" >
       <img id="profileImage" *ngIf="!profilePicture" class="profile rounded-circle" src="https://w7.pngwing.com/pngs/178/595/png-transparent-user-profile-computer-icons-login-user-avatars.png"  alt="Profile Image">
       <input type="file" id="fileInput"
@@ -11,10 +14,12 @@
        (change)="onFileSelected($event)" style="display:none;" >
       <i class="fas fa-camera camera-icon" (click)="triggerFileInput()"></i><br>
       <button class="p-3 bg-white rounded-5" mat-button type="submit" *ngIf="!pictureForm.invalid"><mat-icon>upload</mat-icon> Upload</button>
+      <div class="spinner flex justify-content-center" *ngIf="imageLoading">
+        <mat-spinner></mat-spinner>
+      </div>
       <h4 class="mt-3">Welcome, <span class="fst-italic fw-bold text-warning">{{activeCustomer.customerName}}</span></h4>
     </div>
   </form>
-
   <!-- Profile Navigation Section -->
   <div class="profile-nav mt-5">
     <div class="row">
