--- a/FrontEnd/DishDash/src/app/Components/register/register.component.html
+++ b/FrontEnd/DishDash/src/app/Components/register/register.component.html
@@ -97,7 +97,7 @@
 
     <!-- Spinner -->
     <div class="spinner flex justify-content-center" *ngIf="isLoading">
-      <mat-spinner></mat-spinner>
+      <mat-spinner class="loadingSpinner"></mat-spinner>
     </div>
   </form>
 
